--- a/paytml.html
+++ b/paytml.html
@@ -111,27 +111,30 @@
             <div class="first">
 
                 <div class="fight">
-                <img src="./flight1.png" alt="" height="38" width="38"> </div>  
-                    <div class="fight1"> Fight </div>
-                   
+                <img src="./flight1.png" alt="" height="38" width="38">   
+                    <div class="fight1"> Flights </div>
+                   </div> 
 
                 <div class="bus">
-                <img src="./bus.png" alt="" height="38" width="38"> </div>
-                <div class="Bus1">Bus </div>
+                <img src="./bus.png" alt="" height="38" width="38">  
+                 <div class="Bus1">Bus </div>
+                 </div> 
 
                  <div class="train">
-                <img src="./train.png" alt="" height="38" width="38"> </div>
+                <img src="./train.png" alt="" height="38" width="38">
                 <div class="train1">Trains </div>
+                 </div> 
 
                 <div class="flight2">
                 <img src="./flight02.png" alt="" height="38" width="38"> 
-                </div>
-                <div class="flightin"> Intl.Fights </div>
+               <div class="flightin"> Intl.Flights </div>
+                 </div>
+                 <div class="first1"></div>
+
 
                  <!-- <div class="paytra">
                     <img src="./Paytm_Travel_Logo.svg" alt="" width="140" height="21"></div> -->
                 
-
         </div>    
             <div class="second">  
         </div>
