--- a/paytml.html
+++ b/paytml.html
@@ -108,37 +108,43 @@
         </div>
 
         <div class="con8">
-            <div class="first">
-
-                <div class="fight">
-                <img src="./flight1.png" alt="" height="38" width="38">   
-                    <div class="fight1"> Flights </div>
-                   </div> 
-
-                <div class="bus">
-                <img src="./bus.png" alt="" height="38" width="38">  
-                 <div class="Bus1">Bus </div>
-                 </div> 
-
-                 <div class="train">
-                <img src="./train.png" alt="" height="38" width="38">
-                <div class="train1">Trains </div>
-                 </div> 
-
-                <div class="flight2">
-                <img src="./flight02.png" alt="" height="38" width="38"> 
-               <div class="flightin"> Intl.Flights </div>
-                 </div>
-                 <div class="first1"></div>
+            <div class="con9">
 
 
-                 <!-- <div class="paytra">
-                    <img src="./Paytm_Travel_Logo.svg" alt="" width="140" height="21"></div> -->
-                
-        </div>    
-            <div class="second">  
+                <div class="first">
+
+
+                    <div class="fight">
+                        <img src="./flight1.png" alt="" height="38" width="38">
+                        <div class="fight1"> Flights </div>
+                    </div>
+
+                    <div class="bus">
+                        <img src="./bus.png" alt="" height="38" width="38">
+                        <div class="Bus1">Bus </div>
+                    </div>
+
+                    <div class="train">
+                        <img src="./train.png" alt="" height="38" width="38">
+                        <div class="train1">Trains </div>
+                    </div>
+
+                    <div class="flight2">
+                        <img src="./flight02.png" alt="" height="38" width="38">
+                        <div class="flightin"> Intl.Flights </div>
+                    </div>
+                </div>
+
+                <div class="first1">
+                    <img src="./Paytm_Travel_Logo.svg" alt="" width="140" height="21">
+                </div>
+                <div class="con10">
+
+                </div>
+
+            </div>
+
         </div>
-    </div>
 </body>
 
 </html>
